fixed build and pom